[package]
name = "iron-hmac"
version = "0.3.1"
authors = ["Joe Wilm <joe@jwilm.com>"]
description = "HMAC middleware for the Iron HTTP framework"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jwilm/iron-hmac"
documentation = "https://jwilm.github.io/iron-hmac/latest/iron_hmac/"

[features]
default = ["hmac-rust-crypto"]

# Use openssl HMAC/SHA256 implementations
hmac-openssl = ["openssl"]

# Use rust-crypto HMAC/SHA256 implementations
hmac-rust-crypto = ["rust-crypto"]

[dependencies]
constant_time_eq = "0.1"
iron = { version = "*", default-features = false }
persistent = "0"
rustc-serialize = "0.3"
url = "0.5"

[dependencies.openssl]
version = "0.7"
optional = true

[dependencies.rust-crypto]
version = "0.2"
optional = true

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser"
rev = "f9929111bd2efe7c29b519a5aa2d7bc32fddfac0"

[dev-dependencies.hyper]
version = "0.7"
default-features = false
